--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -1,153 +1,3 @@
-/*
-.full-screen-background.light {
-  background: linear-gradient(135deg, #f0f4f8, #c3e0e9); 
-  color: #2c3e50;
-}
-
-.full-screen-background.dark {
-  background: linear-gradient(135deg, #2c3e50, #34495e);
-  color: #ecf0f1; 
-}
-
-.full-screen-background {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 9999;
-  transition: background 0.3s ease;
-}
-
-.theme-toggle {
-  background-color: #bdc3c7; 
-  border: 2px solid #7f8c8d;
-  border-radius: 50%;
-  padding: 8px;
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  cursor: pointer;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 20px;
-  transition: all 0.3s ease;
-}
-
-.theme-toggle:hover {
-  background-color: #576574;
-  border-color: #576574;
-  color: #ffffff;
-}
-
-.login-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-}
-
-
-.login-box.light {
-  background: linear-gradient(135deg, #2c3e50, #3a4a63); 
-  padding: 40px 30px;
-  border-radius: 15px;
-  box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.1);
-  text-align: center;
-  width: 420px;
-  transition: background 0.3s ease, box-shadow 0.3s ease;
-}
-
-
-.login-box.dark {
-  background: linear-gradient(135deg, #e4f1f7, #bdd2e6); 
-  padding: 40px 30px;
-  border-radius: 15px;
-  box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.3);
-  text-align: center;
-  width: 420px;
-  transition: background 0.3s ease, box-shadow 0.3s ease;
-}
-
-
-.login-title {
-  color: #00cec9;
-  font-family: 'Arial', sans-serif;
-  margin: 0;
-  font-size: 30px;
-  font-weight: 700;
-  letter-spacing: 1px;
-  text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.2);
-}
-
-
-.login-button {
-  background: linear-gradient(135deg, #0984e3, #74b9ff); 
-  color: #ffffff;
-  border: none;
-  border-radius: 30px;
-  padding: 12px;
-  font-size: 18px;
-  width: 70%;
-  cursor: pointer;
-  margin: 15px auto 0;
-  display: block;
-  transition: all 0.3s ease;
-}
-
-.login-button:hover {
-  background: linear-gradient(135deg, #74b9ff, #00cec9);
-  transform: translateY(-2px);
-}
-
-.login-button:active {
-  background: linear-gradient(135deg, #0984e3, #00cec9);
-  transform: translateY(1px);
-}
-
-
-.input-container input {
-  width: 100%;
-  padding: 12px;
-  border-radius: 5px;
-  border: 1px solid #bdc3c7;
-  margin-bottom: 15px;
-  font-size: 16px;
-  transition: border 0.3s ease;
-}
-
-.input-container input:focus {
-  border: 1px solid #0984e3; 
-  outline: none;
-}
-*/
-
-/* .app-title {
-  font-size: 2.5rem;
-  font-weight: bold;
-  margin-bottom: 10px;
-  color: white;
-} */
-
-/* Branding Section
-.branding-text {
-  font-size: 1.1rem;
-  margin-top: 15px;
-  color: #a3abcc;
-  opacity: 0.9;
-  font-family: 'Roboto', sans-serif;
-  text-align: center; /* Center align text horizontally */
-  /* display: flex; /* Use flexbox */
-  /* justify-content: center; /* Center content horizontally */
-  /* align-items: center; /* Center content vertically */
-  /* height: 100%; /* Ensure it takes the full height of its container */
-/* } */
- /* */ 
-
 /* Login Container */
 .login-container {
   display: flex;
